--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
